# glove

./: .clang-format  .gitignore  .gitmodules  .mocca  Doxyfile  README.md  SConstruct  binding-update-module.py  build.sh  devrc.sh  gen-class.py  gen-py-binding.py  get-deps-python.sh  get-deps-win.sh  get-deps.sh
src/: CMakeLists.txt  GloveConfig.h  GloveConfig.h.in  SConscript  main.cpp
src/buffers/: BufferUsage.h  GPUBuffer.cpp  GPUBuffer.h  IGpuBuffer.h  VertexAttributeBuffer.cpp  VertexAttributeBuffer.h  VertexLayoutAttribute.cpp  VertexLayoutAttribute.h  VertexLayoutDefinition.cpp  VertexLayoutDefinition.h
src/buffers/opengl/: GLGpuBuffer.cpp  GLGpuBuffer.h
src/cellulose/: CMakeLists.txt  main.cc
src/core/: BifrostLoader.cc  BifrostLoader.h  CMakeLists.txt  Configuration.cc  Configuration.cpp  Configuration.h  ConfigurationConverters.hpp  GloveCore.cc  GloveCore.cpp  GloveCore.h  GloveEnvironment.cc  GloveEnvironment.cpp  GloveEnvironment.h  GloveException.cc  GloveException.cpp  GloveException.h  GloveFwd.h  GloveObject.cpp  GloveObject.h  GlovePlugin.cc  GlovePlugin.cpp  GlovePlugin.h  GpuBufferManager.cc  GpuBufferManager.cpp  GpuBufferManager.h  IRenderer.h  ISharedLibraryLoader.h  ISharedLibraryLoaderFactory.h  ISubsystemDefinition.h  ISubsystemFactory.h  ISystemExtension.h  IWindow.h  PluginLoader.cc  PluginLoader.cpp  PluginLoader.h  RenderOperation.cc  RenderOperation.cpp  RenderOperation.h  SystemTypes.cpp  SystemTypes.h
src/core/configuration/: CMakeLists.txt  Configuration.cc  Configuration.hpp  ConfigurationConverters.hpp
src/core/events/: AbstractEvent.h  CMakeLists.txt  EventBus.cc  EventBus.h
src/core/exceptions/: OperationNotSupported.cc  OperationNotSupported.hpp
src/core/filesystem/: CMakeLists.txt  FileInfo.hpp  Filesystem.hpp  IFilesystem.hpp  IFilesystemAccessor.hpp  Path.cc  Path.hpp
src/core/graph/: CMakeLists.txt  Camera.cc  Camera.h  GameComponent.cc  GameComponent.h  GameObject.cc  GameObject.h  Graph.h  GraphNode.cc  GraphNode.h  IGameComponentFactory.h  IGraphNode.cc  IGraphNode.h  Scenegraph.cc  Scenegraph.h  Transform.cc  Transform.h
src/core/input/: CMakeLists.txt  InputManager.cc  InputManager.h
src/core/internal/: CMakeLists.txt
src/core/log/: CMakeLists.txt  Log.cc  Log.h
src/core/natex/: BifrostLoader.cc  BifrostLoader.h  CMakeLists.txt  DirectoryExtensionSearcher.cc  DirectoryExtensionSearcher.h  GloveSubsystemDefinition.cc  GloveSubsystemDefinition.h  GloveSubsystemDefinitionRegistry.cc  GloveSubsystemDefinitionRegistry.h  GloveSubsystemInstanceRegistry.cc  GloveSubsystemInstanceRegistry.h  IExtensionSearcher.h  ISharedLibraryLoader.h  ISharedLibraryLoaderFactory.h  ISubsystem.h  ISubsystemDefinition.h  ISubsystemDefinitionRegistry.h  ISubsystemFactory.h  ISubsystemInstanceRegistry.h  ISystemExtension.h  ISystemExtensionLoader.h  Natex.h  SubsystemTypes.cc  SubsystemTypes.h  SystemTypes.h
src/core/pitamem/: CMakeLists.txt  MemoryProfile.cc  MemoryProfile.h  MemoryProfiler.cc  MemoryProfiler.h
src/core/rendering/: CMakeLists.txt  FrameData.h  IRenderOperation.h  IRenderSubsystem.cc  IRenderSubsystem.h  IRenderable.h  IRenderer.h  IWindow.h  RenderOperation.cc  RenderOperation.h  RenderState.h  RendererBase.cc  RendererBase.h  Rendering.h  RenderingInterfaces.h  WindowConstructionHints.cc  WindowConstructionHints.h
src/core/utils/: BitMask.cc  BitMask.h  CMakeLists.txt
src/event/: AbstractEvent.h  EventBus.cpp  EventBus.h  EventSubscriber.cpp  EventSubscriber.h
src/event/type/: CorePreInitEvent.cc  CorePreInitEvent.h  KeyEvent.cpp  KeyEvent.h  MouseButtonEvent.cpp  MouseButtonEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h
src/examples/sandbox/: CMakeLists.txt  main.cc
src/glove/: BlueDwarfApi.hpp  BlueDwarfFwd.hpp  CMakeLists.txt  CommonTypes.hpp  DwarfCore.cc  DwarfCore.hpp  DwarfException.cc  DwarfException.hpp  GloveApi.hpp  GloveConfig.hpp  GloveConfig.hpp.in  GloveCore.cc  GloveCore.h  GloveCore.hpp  GloveEnvironment.cc  GloveEnvironment.h  GloveEnvironment.hpp  GloveException.cc  GloveException.hpp  GloveFwd.hpp  GlovePlugin.cc  Version.hpp
src/glove/application/: CMakeLists.txt  DwarfApplication.cc  DwarfApplication.hpp  GloveApplication.cc  GloveApplication.hpp
src/glove/configuration/: Configuration.cc  Configuration.hpp  ConfigurationConverters.hpp
src/glove/events/: AbstractEvent.h  AbstractEvent.hpp  CMakeLists.txt  EventBus.cc  EventBus.h  EventBus.hpp  EventDelegate.hpp
src/glove/input/: Keys.cc  (+9 more)
src/graph/: GameComponent.cpp  GameComponent.h  GameObject.cc  GameObject.cpp  GameObject.h  IGameComponentFactory.cpp  IGameComponentFactory.h  IGraphNode.cpp  IGraphNode.h  Scenegraph.cc  Scenegraph.cpp  Scenegraph.h  Transform.cc  Transform.cpp  Transform.h
src/input/: InputManager.cpp  InputManager.h
src/integration/: CMakeLists.txt
src/log/: Log.cpp  Log.h  log.cpp  log.h
src/memory/: GloveMemory.cpp  GloveMemory.h
src/modules/: CMakeLists.txt
src/pitamem/: MemoryGroup.h  MemoryProfile.cpp  MemoryProfile.h  MemoryProfiler.cc  MemoryProfiler.h
src/rendering/: Camera.cpp  Camera.h  FrameData.cpp  FrameData.h  GloveRenderer.cpp  GloveRenderer.h  GloveWindow.cpp  GloveWindow.h  IRenderable.cpp  IRenderable.h  IndexedMesh.cpp  IndexedMesh.h  IndexedMeshData.cpp  IndexedMeshData.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h
src/scripting/: GlovePythonEngine.cc  GlovePythonEngine.cpp  GlovePythonEngine.h  PythonPlugin.cpp  PythonPlugin.h
src/shader/: MappedMaterialAttribute.h  MappedVertexAttribute.cpp  MappedVertexAttribute.h  Material.cc  Material.cpp  Material.h  MeshData.cpp  MeshData.h  Shader.cpp  Shader.h  ShaderProgram.cc  ShaderProgram.cpp  ShaderProgram.h
src/tests/: CMakeLists.txt  GloveTest.h
src/utils/: CMakeLists.txt  Demangle.cc  Demangle.cpp  Demangle.hpp  Dimensions.cc  Dimensions.h  FileUtils.cpp  FileUtils.h  IServiceProvider.h  RuntimePathInfo.cc  RuntimePathInfo.cpp  RuntimePathInfo.h  ScreenDimensions.cc  ScreenDimensions.h  ShaderUtils.cc  ShaderUtils.cpp  ShaderUtils.h  Singleton.h  StringId.cpp  StringId.h  StringIdDatabase.cpp  StringIdDatabase.h
(+881 files in other folders)
